--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
+autosaves
 auto-save-list/*
+ac-comphist.dat
+backups
 elpa/*
 ido.last
-ac-comphist.dat
 projectile-bookmarks.eld
 projectile.cache
